# salmonwatch

./: .gitignore  CLAUDE.md  LICENSE  README.md
api/: .env.example  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 92a296d92ff4_initial_schema_spawning_sites_and_.py  b3a1f2c4d5e6_add_unique_index_observations.py  c4d5e6f7a8b9_add_population_analytics.py  d5e6f7a8b9c0_add_indexes_and_constraints.py
api/src/salmonwatch/: config.py  main.py
api/src/salmonwatch/analytics/: compute.py
api/src/salmonwatch/api/: analytics_routes.py  routes.py  schemas.py
api/src/salmonwatch/db/: engine.py  tables.py
api/src/salmonwatch/ingest/: nuseds.py
api/tests/: conftest.py  test_analytics.py  test_db.py  test_ingest.py  test_routes.py  test_status.py
scripts/: download_nuseds.sh
web/: next.config.ts  package-lock.json  package.json  tsconfig.json
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
web/src/app/analytics/: page.tsx
web/src/app/explorer/: page.tsx
web/src/app/population/[id]/: loading.tsx  page.tsx
web/src/components/: ErrorBoundary.tsx
web/src/components/charts/: PopulationTimeSeries.tsx  Sparkline.tsx
web/src/components/map/: HeroMap.tsx  MapPopup.tsx  SalmonMap.tsx  SpawningSiteLayer.tsx
web/src/components/panels/: ContextPanel.tsx  FilterPanel.tsx  StatsBar.tsx
web/src/hooks/: useFilterParams.ts
web/src/lib/: aggregation.ts  api.ts  constants.ts  types.ts
